# aeo-geo-architect-workshop

./: .env.azure  .env.gcp  .env.ollama  .env.openai  .env.precomputed  .gitignore  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  PROJECT_3200_PLAN.md  PROJECT_SUMMARY.md  README.md  REPOSITORY_RESTRUCTURE_PLAN.md  docker-compose.yml  pom.xml  switch-provider.sh
docs/: ARCHITECTURE.md  COST_COMPARISON.md  MIGRATION_TO_SAP.md  PROVIDER_SETUP.md  TROUBLESHOOTING.md
exercises/day1-ex1-complete/: README.md
exercises/day1-ex1-complete/hints/: HINTS.md
exercises/day1-ex1-complete/solution/: ProductSchemaController.java  ProductSchemaControllerTest.java
exercises/day1-ex2-complete/: README.md
exercises/day1-ex2-complete/hints/: HINTS.md
exercises/day1-ex2-complete/solution/: FAQController.java
exercises/day1-exercise1-product-schema/: HINTS.md  README.md
exercises/day1-exercise1-product-schema/starter/: ProductSchemaController.java
exercises/day1-exercise2-faq-schema/starter/: FAQController.java
exercises/day2-ex3-complete/: README.md
exercises/day2-ex3-complete/hints/: HINTS.md
exercises/day2-ex3-complete/solution/: SemanticSearchController.java  SemanticSearchService.java
exercises/day2-ex4-complete/: README.md
exercises/day2-ex4-complete/hints/: HINTS.md
exercises/day2-ex4-complete/solution/: BotAnalyticsController.java  BotAnalyticsService.java  BotDetectionFilter.java
workshops/02-forddirect-automotive/: README.md
workshops/02-forddirect-automotive/backend/: pyproject.toml
workshops/02-forddirect-automotive/backend/app/: main.py
(+59 files in other folders)
